--- a/OdeToFood/TODO.txt
+++ b/OdeToFood/TODO.txt
@@ -1,3 +1,10 @@
 Implement another table just for adding food types
 Give the user the ability to add and remove types of food 
 Add validation for each use case ie ( if a food type that is being used is removed ) 
+
+
+
+- Things that need to be worked out:
+How to link the CuisineTypes back to the restaurants and how to properly refer them? 
+( Possibly: get a cusinetype id and retrieve name from that?)
+
